@@ -71,8 +71,6 @@ typedef struct {
 /** Comparision function type for qsort(), just for convenience. */
 typedef int (*__compar_fn_t)(const void *, const void *);
 
-#define	RAND_MAX 0x7FFFFFFF
-
 #ifndef DOXYGEN
 
 #ifndef __ATTR_CONST__
@@ -378,6 +376,39 @@ extern void *calloc(size_t __nele, size_t __size) __ATTR_MALLOC__;
  */
 
 extern double strtod(const char *__nptr, char **__endptr);
+
+/** Highest number that can be generated by rand(). */
+#define	RAND_MAX 0x7FFF
+
+/**
+     The rand() function computes a sequence of pseudo-random integers in the
+     range of 0 to \c RAND_MAX (as defined by the header file <stdlib.h>).
+
+     The srand() function sets its argument \c seed as the seed for a new
+     sequence of pseudo-random numbers to be returned by rand().  These
+     sequences are repeatable by calling srand() with the same seed value.
+
+     If no seed value is provided, the functions are automatically seeded with
+     a value of 1.
+
+     In compliance with the C standard, these functions operate on
+     \c int arguments.  Since the underlying algorithm already uses
+     32-bit calculations, this causes a loss of precision.  See
+     \c random() for an alternate set of functions that retains full
+     32-bit precision.
+*/
+extern int rand(void);
+/**
+   Pseudo-random number generator seeding; see rand().
+*/
+extern void srand(unsigned int __seed);
+
+/**
+   Variant of rand() that stores the context in the user-supplied
+   variable located at \c ctx instead of a static library variable
+   so the function becomes re-entrant.
+*/
+extern int rand_r(unsigned long *ctx);
 /*@}*/
 
 /*@{*/
@@ -441,6 +472,32 @@ extern char *utoa(unsigned int __val, char *__s, int __radix);
 */
 extern char *ultoa(unsigned long int __val, char *__s, int __radix);
 
+/** Highest number that can be generated by random(). */
+#define	RANDOM_MAX 0x7FFFFFFF
+
+/**
+     The random() function computes a sequence of pseudo-random integers in the
+     range of 0 to \c RANDOM_MAX (as defined by the header file <stdlib.h>).
+
+     The srandom() function sets its argument \c seed as the seed for a new
+     sequence of pseudo-random numbers to be returned by rand().  These
+     sequences are repeatable by calling srandom() with the same seed value.
+
+     If no seed value is provided, the functions are automatically seeded with
+     a value of 1.
+*/
+extern long random(void);
+/**
+   Pseudo-random number generator seeding; see random().
+*/
+extern void srandom(unsigned long __seed);
+
+/**
+   Variant of random() that stores the context in the user-supplied
+   variable located at \c ctx instead of a static library variable
+   so the function becomes re-entrant.
+*/
+extern long random_r(unsigned long *ctx);
 #endif /* __ASSEMBLER */
 /*@}*/
 
@@ -496,9 +553,7 @@ extern char *dtostrf(double __val, char __width, char __prec, char *__s);
 #if 0  /* not yet implemented */
 extern int atexit(void (*)(void));
 extern double atof(const char *);
-extern int rand(void);
 extern void *realloc(void *, size_t);
-extern void srand(unsigned int);
 #endif
 
 #ifdef __cplusplus
